// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummarySection failure only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 0,
        "pass": 0,
      }
    }
  />
</div>
`;

exports[`SummarySection failures + not applicable + passes 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 3,
        "pass": 2,
      }
    }
  />
</div>
`;

exports[`SummarySection failures + not applicable only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 3,
        "pass": 0,
      }
    }
  />
</div>
`;

exports[`SummarySection failures + passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 3,
        "inapplicable": 0,
        "pass": 2,
      }
    }
  />
</div>
`;

exports[`SummarySection not applicable + passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 3,
        "pass": 2,
      }
    }
  />
</div>
`;

exports[`SummarySection not applicable only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 0,
        "pass": 2,
      }
    }
  />
</div>
`;

exports[`SummarySection passes only 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      Array [
        "fail",
        "pass",
        "inapplicable",
      ]
    }
    iconStyleInverted={true}
    outcomeStats={
      Object {
        "fail": 0,
        "inapplicable": 0,
        "pass": 2,
      }
    }
  />
</div>
`;
